@@ -2,6 +2,8 @@
 
   1. POM updates for GCS connector 1.9.17.
 
+  2. Support nested record type in field schema in BigQuery connector.
+
 
 0.13.16 - 2019-02-25
 
